custom/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  namespace: production
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fsl-challenge
  template:
    metadata:
      labels:
        app: fsl-challenge
    spec:
      containers:
        - name: fsl-challenge
          image: satish680/fullstack:latest # Update with your actual image
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: production
spec:
  selector:
    app: fsl-challenge
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
